@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fixed bug [ 1647726 ] double entries shown at 'system settings' admin.php
  - Fixed bug [ 1645985 ] cal_location limited to varchar(50)
  - Fixed bug [ 1637253 ] After importiong Outlook CSV file, Reminders not set
  - Added option to display end times in calendars
